# chessgame

./: .gitignore  Chess_classes.py  LICENSE  LICENSE.md  Makefile  README.md  justfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
chess/: board.py  chess_class.py  colour_and_aliases.py  colours.py  user_interaction.py
chess/pieces/: __init__.py  piece_base.py  piece_classes.py  piece_interface.py
requirements/: requirements_dev.in  requirements_dev.txt
src/: board.py  chess.py  chess_classes.py  game.py  main.py
src/chess/: __init__.py  board.py  chess.py  chess_class.py  colours.py  user_interaction.py
src/chess/pieces/: __init__.py  piece_base.py  piece_classes.py  piece_interface.py  pieces.py
src/pieces/: __init__.py  piece_base.py  pieces.py
src/utils/: __init__.py  enums.py
test/: test_Chess_classes.py  test_chess_classes.py
tests/: conftest.py  fixtures.py  test_board.py  test_chess_class.py
tests/test_chess/test_pieces/: test_piece_classes.py
tests/test_pieces/: test_piece_classes.py
