[project]
name = "chess"
version = "0.1.0"
description = "Chess in python."
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.2",
]

[tool.uv]
required-version = ">=0.7.19"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 99
indent-width = 4
respect-gitignore = true
fix = true

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtin
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",  # flake8-bugbear
    "C901",  # mccabe-complexity
    "D",  # pydocstyle
    "E",  # pycodestyle
    "F",  # Pyflakes
    "FBT",  # flake8-boolean-trap
    "G",  # flake8-logging-format
    "I",  # isort
    "LOG",  # flake8-logging
    "N",  # pep8-naming
    "NPY",  # NumPy rules
    "PL",  # pylint
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff rules
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # pycodestyle
]

ignore = [
    "D105",  # pydocstyle: missing docstring in magic method
    "D107",  # pydocstyle: missing docstring in __init__
    "D417",  # pydocstyle: documentation for every function parameter
    "RUF001",  # Ruff: String contains ambiguous {}. Did you mean {}?
    "RUF100",  # Ruff: Unused noqa directive
    "ANN204",  # flake8-annotations: Missing return type annotation for special method
    "PYI041",  # Use float instead of int | float
    "PLR2004",  # pylint: allow using numeric literals.
    "PLR0915",  # pylint: too-many-statements
    "PLR0913",  # pylint: too-many-arguments
]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Disable some rules for tests.
"tests/**/*.py" = ["D100", "D102", "D103", "B018", "FBT001"]
"__init__.py" = ["D104", "F401"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
files = ["src/chess", "tests"]
strict = true
show_error_codes = true
enable_error_code = ["deprecated"]
